# pubmed-dataset-creator

./: .gitignore  README.md  pubmed_queries.py  pyproject.toml
utils/: convert_to_pickle.py  read_data.py
